# hrpsys-base

./: .travis.sh  .travis.yml  CMakeLists.txt
.github/workflows/: hydro.yml  indigo.yml  kinetic.yml  melodic.yml
idl/: CMakeLists.txt  KalmanFilterService.idl  SoftErrorLimiterService.idl  StabilizerService.idl  ThermoEstimatorService.idl  VirtualForceSensorService.idl
python/: hrpsys_config.py
rtc/AutoBalancer/: #SimpleFullbodyInverseKinematicsSolver.h#  AutoBalancer.cpp  FullbodyInverseKinematicsSolver.h
rtc/CollisionDetector/: CollisionDetector.cpp  CollisionDetector.h  VclipLinkPair.cpp  VclipLinkPair.h
rtc/EmergencyStopper/: EmergencyStopper.cpp
rtc/HapticController/: HapticController.cpp  HapticController.h
rtc/ImpedanceController/: ImpedanceController.cpp  JointPathEx.cpp  JointPathEx.h
rtc/KalmanFilter/: EKFilter.h  KalmanFilter.cpp  KalmanFilter.h  MadgwickAHRS.h
rtc/ReferenceForceUpdater/: ReferenceForceUpdater.cpp
rtc/RemoteStabilizer/: CMakeLists.txt  RemoteStabilizer.h  RemoteStabilizerService_impl.cpp
rtc/RobotHardware/: RobotHardware.cpp  RobotHardware.h  defs.h  robot.cpp  robot.h
rtc/SequencePlayer/: SequencePlayer.cpp  seqplay.cpp  seqplay.h
rtc/SoftErrorLimiter/: CMakeLists.txt  SoftErrorLimiter.cpp  SoftErrorLimiter.h  SoftErrorLimiterService_impl.cpp  SoftErrorLimiterService_impl.h  robot.cpp  robot.h
rtc/Stabilizer/: CMakeLists.txt  EndEffector.cpp  EndEffector.h  MultiContactStabilizer.h  MultiContactStabilizerUtil.h  RemoteStabilizer.cpp  RemoteStabilizer.h  RemoteStabilizerComp.cpp  Stabilizer.cpp  Stabilizer.h  StabilizerService_impl.cpp  StabilizerService_impl.h  TorqueJacobian.cpp  TorqueJacobian.h  ZMPDistributor.h  osqp_solver.cpp  osqp_solver.h  qpOASES_solver.cpp  qpOASES_solver.h
rtc/StateHolder/: StateHolder.cpp
rtc/ThermoEstimator/: MotorHeatParam.h  ThermoEstimator.cpp  ThermoEstimator.h  ThermoEstimatorService_impl.cpp  ThermoEstimatorService_impl.h
rtc/ThermoLimiter/: ThermoLimiter.cpp  ThermoLimiter.h
rtc/VirtualForceSensor/: VirtualForceSensor.cpp  VirtualForceSensor.h  VirtualForceSensorService_impl.cpp  VirtualForceSensorService_impl.h
rtc/WholeBodyMasterSlave/: WholeBodyMasterSlave.cpp  WholeBodyMasterSlave.h  wbms_core.h
